--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,20 @@ html {
 	border-radius: 25px;
 	transition:2s;
 }
+.inline-globe {
+	height:1.5rem;
+}
+.col {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /*small desktops*/
 @media screen and (max-width: 1200px) {
 	.logo {
@@ -82,4 +96,17 @@ html {
 		width:auto;
 		padding:3%;
 	}
+	.loadingImage {
+		width:80%;
+	}
+	#ldgImg {
+		width:100%;
+	}
+	.animator {
+		bottom:15px;
+		margin-left:5px;
+	}
+	.column {
+    	width: 100%;
+    }
 }
