--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,14 +32,16 @@ html {
 }
 .global {
 	color:#018be0;
+	white-space:nowrap;
 }
 .loading {
-	position:absolute;
+	position:fixed;
 	width:100%;
 	top:0;
 	bottom:0;
 	background-color:white;
 	transition:2s;
+	z-index:60000;
 }
 .loadingImage {
 	position: relative;
@@ -107,9 +109,17 @@ html {
   width: 28%;
   margin:1%;
   padding: 10px;
+  
   /*height: 300px;  Should be removed. Only for demonstration */
 }
+.shadow:hover {
+  box-shadow: 10px 10px 5px #9d9d9d;
 
+}
+.shadow {
+	box-shadow: 5px 5px 2.5px #9d9d9d;
+	transition:.5s;
+}
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -126,6 +136,9 @@ html {
 	}
 	.image {
 		padding-top:15%;
+	}
+	.content {
+		top:45%;
 	}
 }
 /*mobile*/
@@ -152,5 +165,10 @@ html {
 	}
 	.column {
     	width: 100%;
+    }
+    .content {
+    	width:95%;
+    	padding:0px;
+    	top:60%;
     }
 }
