--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ body {
 	border:1px solid black;
 	text-align:center;
 	margin:.5%;
+	padding-bottom:2%;
+	margin-bottom:2%;
 }
 @media only screen and (min-width: 900px) {
 	.padded_sys {
