Updates to jfonts in anticipation of Ethan Brand.

--- a/static/cdn/jfonts.css
+++ b/static/cdn/jfonts.css
@@ -32,3 +32,13 @@
 	font-family:"Product Sans";
 	src:url("https://jackcrane.github.io/static/cdn/fonts/productSans.ttf");
 }
+
+@font-face {
+	font-family:"Hacked";
+	src:url("https://jackcrane.github.io/static/cdn/fonts/hacked.ttf");
+}
+
+@font-face {
+	font-family:"Library";
+	src:url("https://jackcrane.github.io/static/cdn/fonts/library.otf");
+}
