--- a/ethanbrand/assets/style.css
+++ b/ethanbrand/assets/style.css
@@ -14,16 +14,42 @@
 .titleContainer {
 	position: relative;
 	overflow:none;
-	height:100vh;
+	height:94vh;
 }
 
 .titleContainer img {
-    transform: translate(-23%, 0%);
-	min-height:100%;
-	min-width:100%;
+	height:100vh;
+	width:100%;
+	float:left;
+	object-fit:cover;
+}
+
+.bodyContainerWhite {
+	background-color:#F5F5F5;
+	height: 100vh;
+	padding-top:10%;
 }
 
 body {
 	margin:0;
 	background-color:#1f1f1f;
+}
+
+.library {
+	font-family:library;
+	font-size:5rem!important;
+	text-align:center;
+}
+
+.bodyContainerWhite p {
+	font-size:2rem;
+	font-family:sans-serif;
+	text-align: justify;
+	text-justify: inter-word;
+}
+
+.bodyContainerWhite .content {
+	padding-left:10%;
+	padding-right:10%;
+	width:80%;
 }
