Update of EB's Website

--- a/ethanbrand/assets/style.css
+++ b/ethanbrand/assets/style.css
@@ -8,7 +8,7 @@
 	width:80%;
 	text-align:center;
 	mix-blend-mode: difference;
-  	color: white;
+		color: white;
 }
 
 .titleContainer {
@@ -18,21 +18,22 @@
 }
 
 .titleContainer img {
-	height:100vh;
+	height:100%;
 	width:100%;
 	float:left;
 	object-fit:cover;
 }
 
 .bodyContainerWhite {
-	background-color:#F5F5F5;
+	/*background-color:#F5F5F5;*/
 	height: 100vh;
 	padding-top:10%;
 }
 
 body {
 	margin:0;
-	background-color:#1f1f1f;
+	background-color:gainsboro;
+	font-family:sans-serif;
 }
 
 .library {
@@ -41,8 +42,13 @@ body {
 	text-align:center;
 }
 
+.libraryH2 {
+	font-family:library;
+	text-align: left;
+		font-size: 3rem!important;
+}
+
 .bodyContainerWhite p {
-	font-size:2rem;
 	font-family:sans-serif;
 	text-align: justify;
 	text-justify: inter-word;
@@ -52,4 +58,79 @@ body {
 	padding-left:10%;
 	padding-right:10%;
 	width:80%;
+}
+
+.contentText {
+	padding-left:10%;
+	padding-right:10%;
+	width:80%;
+}
+
+.contentText h2 {
+	font-size:2rem!important;
+}
+
+.text section {
+	padding-bottom:2%;
+}
+
+:root {
+	--main-color: #1f1f1f;
+}
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+	--main-color: #1f1f1f;
+	background-color: var(--main-color);
+	color: #F5F5F5;
+	cursor: pointer;
+	padding: 18px;
+	padding-bottom:16px;
+	width: 99%;
+	border: none;
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+	transition:.3s;
+	margin:.5%;
+	margin-bottom:0;
+	overflow:auto;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+	--main-color: #2e2e2e;
+	background-color: var(--main-color);
+}
+
+.drop {
+	border:2px solid var(--main-color);
+	margin-left:.5%;
+	margin-right:.5%;
+	overflow:auto;
+	margin-bottom:.5%;
+	display:block;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content-coll {
+	padding: 0 18px;
+	background-color: inherit;
+	max-height: 0;
+/*	 overflow: hidden; */
+	transition: max-height 0.5s ease-out;
+	
+}
+
+.collapsible:after {
+	content: '\02795'; /* Unicode character for "plus" sign (+) */
+	font-size: 13px;
+	color: white;
+	float: right;
+	margin-left: 5px;
+	
+}
+
+.active:after {
+	content: "\2796"; /* Unicode character for "minus" sign (-) */
 }
