--- a/ethanbrand/assets/style.css
+++ b/ethanbrand/assets/style.css
@@ -78,6 +78,10 @@ body {
 	--main-color: #1f1f1f;
 }
 
+#text {
+	font-size:15px;
+}
+
 /* Style the button that is used to open and close the collapsible content */
 .collapsible {
 	--main-color: #1f1f1f;
