--- a/newStyle.css
+++ b/newStyle.css
@@ -33,6 +33,7 @@ html,body {
 	margin:0;
 	padding:0;
 	background-color:#2b2b2b;
+  font-family:sans-serif;
 }
 code {
 	font-family: 'Source Code Pro', monospace;
