--- a/salvation/assets/css/style.css
+++ b/salvation/assets/css/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 .download {
-	margin-left:37.5%;
+	margin:0 auto;
 	background-color:#4CAF50;
 	width:30%;
 	color:white;
@@ -65,6 +65,12 @@ body {
 @media only screen and (max-width:600px) and (min-width:441px) {
 	.header h1 {
 		padding-top:50%;
+	}
+}
+
+@media only screen and (max-width:700px) and (min-width:0px) {
+	.download {
+		display:none!important;
 	}
 }
 
