--- a/salvation/assets/css/style.css
+++ b/salvation/assets/css/style.css
@@ -68,15 +68,12 @@ body {
 	}
 }
 
-@media only screen and (max-width:700px) and (min-width:0px) {
-	.download {
-		display:none!important;
-	}
-}
-
 @media only screen and (max-width:900px) and (min-width:601px) {
 	.header h1 {
 		padding-top:35%;
+	}
+	.download {
+		display:none;
 	}
 }
 
