--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -12,10 +12,17 @@ body {
 	color:white;
 }
 
+@media only screen and (min-width: 1650px) {
+	h1 {
+		padding-top:5%!important;
+	}
+}
+
 @media only screen and (max-width: 1100px) {
 	body {
 		background-image:url("3.png")!important;
 	}
+	
 	body div {
 		margin-left:0%!important;
 	}
@@ -73,4 +80,3 @@ a:hover {
 body div {
 	margin-left:5%;
 }
-
