--- a/ovr/assets/css/style.css
+++ b/ovr/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap');
+
 :root {
 	--black-rep:#2f2f2f;
 	--lightgrey:#f6f8f8;
@@ -6,7 +8,7 @@
 body, html {
 	margin:0;
 	padding:0;
-	font-family:sans-serif;
+	font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .left {
