--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ body,html {
 .btn {
   background-color: #0080ff;
   padding: 10px;
-  margin: 30px;
+  margin: 5px;
   text-decoration: none;
+  display:inline-block;
   color: white;
   background: rgb(0,128,255);
   background: -moz-radial-gradient(circle, rgba(0,128,255,1) 0%, rgba(0,100,200,1) 100%);
@@ -38,7 +39,6 @@ body,html {
   -webkit-box-shadow: 0px 0px 15px 4px rgba(0,128,255,0.25);
   box-shadow: 0px 0px 15px 4px rgba(0,128,255,0.25);
   transition:.2s;
-  line-height:3;
 }
 
 .btn:hover {
@@ -67,6 +67,8 @@ body,html {
   border-radius:15px;
   transition:.2s;
   display:inline-block;
+  max-height:400px;
+  overflow:scroll;
 }
 
 @media only screen and (max-width: 760px) {
@@ -82,4 +84,8 @@ body,html {
 .projects {
   padding-top:25vh;
   height:90vh;
+}
+
+li {
+  list-style-position: inside;
 }
